Deployment/oauth2proxy-azuread/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: test
  labels:
    app: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: "quay.io/pusher/oauth2_proxy:v5.0.0"
          ports:
            - name: http
              containerPort: 4180
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
          args:
            - --provider=oidc
            - --email-domain=*
            - --upstream=file:///dev/null
            - --http-address=0.0.0.0:4180

            - --redirect-url=https://<domain>:30443/oauth2/callback
            - --oidc-issuer-url=https://login.microsoftonline.com/<tenant>/v2.0
            - --insecure-oidc-allow-unverified-email
            #- --profile-url=https://graph.microsoft.com/oidc/userinfo
            - --scope=openid offline_access profile email

            - --cookie-secure=false
            #damit Token weitergeleitet wird: https://groups.google.com/forum/#!topic/kubernetes-users/WoPgUfn6aLQ
            - --set-xauthrequest
            - --set-authorization-header
            #- --pass-access-token
            #- --pass-authorization-header
