Deployment/oauth2proxy-azuread/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: test
  labels:
    app: oauth2-proxy
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  tls:
    - hosts:
        - <domain>
      secretName: test-tls
  rules:
    - host: <domain>
      http:
        paths:
          - path: /oauth2
            backend:
              serviceName: oauth2-proxy
              servicePort: http
